--- a/nocodb/Chart.yaml
+++ b/nocodb/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: nocodb
-description: A Helm chart for nocodb
+description: An Unofficial Helm chart for nocodb
 
 # A chart can be either an 'application' or a 'library' chart.
 #
