--- a/nocodb/values.yaml
+++ b/nocodb/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nocodb
+  repository: nocodb/nocodb
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
