Added env vars for deployment configuration

--- a/nocodb/templates/deployment.yaml
+++ b/nocodb/templates/deployment.yaml
@@ -27,6 +27,11 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
+          {{- $num_env := len .Values.env -}}
+          {{- if gt $num_env 0 }}
+          env:
+            {{- include "nocodb-helm.env" . | trim | nindent 12 }}
+          {{- end }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
